@@ -70,17 +70,17 @@
 #define LDAP_NSS_MAXCONNTRIES    2	/* reconnect attempts before sleeping */
 
 #ifdef DEBUG
-# ifdef DEBUG_SYSLOG
-#  ifdef HAVE_NSSWITCH_H
-#   define debug(fmt, args...) syslog(LOG_DEBUG, "nss_ldap: thread %u - " fmt, thr_self() , ## args);
-#  else
-#   define debug(fmt, args...) syslog(LOG_DEBUG, "nss_ldap: thread %u - " fmt, pthread_self() , ## args)
-#  endif /* HAVE_NSSWITCH_H */
-# else
-#  ifdef _AIX
-#   include <stdarg.h>
+#ifdef DEBUG_SYSLOG
+#ifdef HAVE_NSSWITCH_H
+#define debug(fmt, args...) syslog(LOG_DEBUG, "nss_ldap: thread %u - " fmt, thr_self() , ## args);
+#else
+#define debug(fmt, args...) syslog(LOG_DEBUG, "nss_ldap: thread %u - " fmt, pthread_self() , ## args)
+#endif /* HAVE_NSSWITCH_H */
+#else
+#ifdef _AIX
+#include <stdarg.h>
 static void
-debug (char *fmt, ...)
+debug (char *fmt,...)
 {
   va_list ap;
 
@@ -90,30 +90,30 @@ debug (char *fmt, ...)
   va_end (ap);
   fprintf (stderr, "\n");
 }
-#  else
-#   define debug(fmt, args...) fprintf(stderr, "nss_ldap: " fmt "\n" , ## args)
-#  endif /* AIX */
-# endif	/* DEBUG_SYSLOG */
 #else
-# ifdef _AIX
+#define debug(fmt, args...) fprintf(stderr, "nss_ldap: " fmt "\n" , ## args)
+#endif /* AIX */
+#endif /* DEBUG_SYSLOG */
+#else
+#ifdef _AIX
 static void
-debug (char *fmt, ...)
+debug (char *fmt,...)
 {
 }
-# else
-#  define debug(fmt, args...)
-# endif	/* AIX */
+#else
+#define debug(fmt, args...)
+#endif /* AIX */
 #endif /* DEBUG */
 
 #ifdef __GNUC__
-# define alignof(ptr) __alignof__(ptr)
-# define INLINE inline
+#define alignof(ptr) __alignof__(ptr)
+#define INLINE inline
 #elif defined(HAVE_ALIGNOF_H)
-# include <alignof.h>
-# define INLINE
+#include <alignof.h>
+#define INLINE
 #else
-# define alignof(ptr) (sizeof(char *))
-# define INLINE
+#define alignof(ptr) (sizeof(char *))
+#define INLINE
 #endif /* __GNUC__ */
 
 #define align(ptr, blen, TYPE)              do { \
@@ -128,22 +128,22 @@ debug (char *fmt, ...)
 
 /* selectors for different maps */
 enum ldap_map_selector
-{
-  LM_PASSWD,
-  LM_SHADOW,
-  LM_GROUP,
-  LM_HOSTS,
-  LM_SERVICES,
-  LM_NETWORKS,
-  LM_PROTOCOLS,
-  LM_RPC,
-  LM_ETHERS,
-  LM_NETMASKS,
-  LM_BOOTPARAMS,
-  LM_ALIASES,
-  LM_NETGROUP,
-  LM_NONE
-};
+  {
+    LM_PASSWD,
+    LM_SHADOW,
+    LM_GROUP,
+    LM_HOSTS,
+    LM_SERVICES,
+    LM_NETWORKS,
+    LM_PROTOCOLS,
+    LM_RPC,
+    LM_ETHERS,
+    LM_NETMASKS,
+    LM_BOOTPARAMS,
+    LM_ALIASES,
+    LM_NETGROUP,
+    LM_NONE
+  };
 
 typedef enum ldap_map_selector ldap_map_selector_t;
 
@@ -152,16 +152,16 @@ typedef enum ldap_map_selector ldap_map_selector_t;
  * see draft-joslin-config-schema-00.txt
  */
 struct ldap_service_search_descriptor
-{
-  /* search base, qualified */
-  char *lsd_base;
-  /* scope */
-  int lsd_scope;
-  /* filter */
-  char *lsd_filter;
-  /* next */
-  /* struct ldap_service_search_descriptor *lsd_next; */
-};
+  {
+    /* search base, qualified */
+    char *lsd_base;
+    /* scope */
+    int lsd_scope;
+    /* filter */
+    char *lsd_filter;
+    /* next */
+    /* struct ldap_service_search_descriptor *lsd_next; */
+  };
 
 typedef struct ldap_service_search_descriptor
   ldap_service_search_descriptor_t;
@@ -176,43 +176,43 @@ typedef struct ldap_service_search_descriptor
  * could be used after a failed or exhausted search.
  */
 struct ldap_config
-{
-  /* space delimited list of servers */
-  char *ldc_host;
-  /* port, expected to be common to all servers */
-  int ldc_port;
-  /* base DN, eg. dc=gnu,dc=org */
-  char *ldc_base;
-  /* scope for searches */
-  int ldc_scope;
-  /* dereference aliases/links */
-  int ldc_deref;
-  /* bind DN */
-  char *ldc_binddn;
-  /* bind cred */
-  char *ldc_bindpw;
-  /* shadow bind DN */
-  char *ldc_rootbinddn;
-  /* shadow bind cred */
-  char *ldc_rootbindpw;
-  /* protocol version */
-  int ldc_version;
-  /* search timelimit */
-  int ldc_timelimit;
-  /* bind timelimit */
-  int ldc_bind_timelimit;
-  /* SSL enabled */
-  int ldc_ssl_on;
-  /* SSL certificate path */
-  char *ldc_sslpath;
-  /* Chase referrals */
-  int ldc_referrals;
-  int ldc_restart;
-  /* naming contexts */
-  ldap_service_search_descriptor_t *ldc_sds[LM_NONE];
-  /* next configuration. loops back onto itself for last entry */
-  struct ldap_config *ldc_next;
-};
+  {
+    /* space delimited list of servers */
+    char *ldc_host;
+    /* port, expected to be common to all servers */
+    int ldc_port;
+    /* base DN, eg. dc=gnu,dc=org */
+    char *ldc_base;
+    /* scope for searches */
+    int ldc_scope;
+    /* dereference aliases/links */
+    int ldc_deref;
+    /* bind DN */
+    char *ldc_binddn;
+    /* bind cred */
+    char *ldc_bindpw;
+    /* shadow bind DN */
+    char *ldc_rootbinddn;
+    /* shadow bind cred */
+    char *ldc_rootbindpw;
+    /* protocol version */
+    int ldc_version;
+    /* search timelimit */
+    int ldc_timelimit;
+    /* bind timelimit */
+    int ldc_bind_timelimit;
+    /* SSL enabled */
+    int ldc_ssl_on;
+    /* SSL certificate path */
+    char *ldc_sslpath;
+    /* Chase referrals */
+    int ldc_referrals;
+    int ldc_restart;
+    /* naming contexts */
+    ldap_service_search_descriptor_t *ldc_sds[LM_NONE];
+    /* next configuration. loops back onto itself for last entry */
+    struct ldap_config *ldc_next;
+  };
 
 typedef struct ldap_config ldap_config_t;
 
@@ -221,12 +221,12 @@ typedef struct ldap_config ldap_config_t;
  * connection to an LDAP server.
  */
 struct ldap_session
-{
-  /* the connection */
-  LDAP *ls_conn;
-  /* pointer into config table */
-  ldap_config_t *ls_config;
-};
+  {
+    /* the connection */
+    LDAP *ls_conn;
+    /* pointer into config table */
+    ldap_config_t *ls_config;
+  };
 
 typedef struct ldap_session ldap_session_t;
 
@@ -240,30 +240,30 @@ typedef struct ldap_session ldap_session_t;
 #endif
 
 enum ldap_args_types
-{
-  LA_TYPE_STRING,
-  LA_TYPE_NUMBER,
-  LA_TYPE_STRING_AND_STRING,
-  LA_TYPE_NUMBER_AND_STRING
-};
+  {
+    LA_TYPE_STRING,
+    LA_TYPE_NUMBER,
+    LA_TYPE_STRING_AND_STRING,
+    LA_TYPE_NUMBER_AND_STRING
+  };
 
 typedef enum ldap_args_types ldap_args_types_t;
 
 struct ldap_args
-{
-  ldap_args_types_t la_type;
-  union
   {
-    const char *la_string;
-    long la_number;
-  }
-  la_arg1;
-  union
-  {
-    const char *la_string;
-  }
-  la_arg2;
-};
+    ldap_args_types_t la_type;
+    union
+      {
+	const char *la_string;
+	long la_number;
+      }
+    la_arg1;
+    union
+      {
+	const char *la_string;
+      }
+    la_arg2;
+  };
 
 typedef struct ldap_args ldap_args_t;
 
@@ -291,21 +291,21 @@ typedef struct ldap_args ldap_args_t;
  * instances of ent_context_t. The latter contains the former.
  */
 struct ldap_state
-{
-  int ls_type;
-  int ls_retry;
+  {
+    int ls_type;
+    int ls_retry;
 #define LS_TYPE_KEY	(0)
 #define LS_TYPE_INDEX	(1)
-  union
-  {
-    /* ls_key is the requested attribute value.
-       ls_index is the desired offset into the value list.
-     */
-    const char *ls_key;
-    int ls_index;
-  }
-  ls_info;
-};
+    union
+      {
+	/* ls_key is the requested attribute value.
+	   ls_index is the desired offset into the value list.
+	 */
+	const char *ls_key;
+	int ls_index;
+      }
+    ls_info;
+  };
 
 typedef struct ldap_state ldap_state_t;
 /*
@@ -317,22 +317,22 @@ typedef struct ldap_state ldap_state_t;
  * thread specific context: result chain, and state data
  */
 struct ent_context
-{
-  ldap_state_t ec_state;	/* eg. for services */
-  int ec_msgid;			/* message ID */
-  LDAPMessage *ec_res;		/* result chain */
-};
+  {
+    ldap_state_t ec_state;	/* eg. for services */
+    int ec_msgid;		/* message ID */
+    LDAPMessage *ec_res;	/* result chain */
+  };
 
 typedef struct ent_context ent_context_t;
 
 #ifdef HAVE_NSSWITCH_H
 
 struct nss_ldap_backend
-{
-  nss_backend_op_t *ops;
-  int n_ops;
-  ent_context_t *state;
-};
+  {
+    nss_backend_op_t *ops;
+    int n_ops;
+    ent_context_t *state;
+  };
 
 typedef struct nss_ldap_backend nss_ldap_backend_t;
 
@@ -341,12 +341,12 @@ typedef nss_status_t NSS_STATUS;
 #elif defined(HAVE_IRS_H)
 
 typedef enum
-{
-  NSS_SUCCESS,
-  NSS_NOTFOUND,
-  NSS_UNAVAIL,
-  NSS_TRYAGAIN
-}
+  {
+    NSS_SUCCESS,
+    NSS_NOTFOUND,
+    NSS_UNAVAIL,
+    NSS_TRYAGAIN
+  }
 NSS_STATUS;
 /* #define HAVE_NSS_H  */
 
@@ -370,17 +370,17 @@ typedef enum nss_status NSS_STATUS;
 #endif
 
 #ifdef HAVE_THREAD_H
-# define nss_lock()		mutex_lock(&_nss_ldap_lock)
-# define nss_unlock()		mutex_unlock(&_nss_ldap_lock)
+#define nss_lock()		mutex_lock(&_nss_ldap_lock)
+#define nss_unlock()		mutex_unlock(&_nss_ldap_lock)
 #elif defined(HAVE_LIBC_LOCK_H) || defined(HAVE_BITS_LIBC_LOCK_H)
-# define nss_lock()		__libc_lock_lock(_nss_ldap_lock)
-# define nss_unlock()		__libc_lock_unlock(_nss_ldap_lock)
+#define nss_lock()		__libc_lock_lock(_nss_ldap_lock)
+#define nss_unlock()		__libc_lock_unlock(_nss_ldap_lock)
 #elif defined(HAVE_PTHREAD_H)
-# define nss_lock()		pthread_mutex_lock(&_nss_ldap_lock)
-# define nss_unlock()		pthread_mutex_unlock(&_nss_ldap_lock)
+#define nss_lock()		pthread_mutex_lock(&_nss_ldap_lock)
+#define nss_unlock()		pthread_mutex_unlock(&_nss_ldap_lock)
 #else
-# define nss_lock()
-# define nss_unlock()
+#define nss_lock()
+#define nss_unlock()
 #endif
 
 typedef NSS_STATUS (*parser_t) (LDAP *, LDAPMessage *, ldap_state_t *, void *,
@@ -392,11 +392,11 @@ typedef NSS_STATUS (*parser_t) (LDAP *, LDAPMessage *, ldap_state_t *, void *,
  */
 
 struct ldap_error
-{
-  int le_errno;
-  char *le_matched;
-  char *le_errmsg;
-};
+  {
+    int le_errno;
+    char *le_matched;
+    char *le_errmsg;
+  };
 
 typedef struct ldap_error ldap_error_t;
 
@@ -441,7 +441,7 @@ LDAPMessage *_nss_ldap_next_entry (LDAPMessage * res);
  */
 NSS_STATUS _nss_ldap_search_s (const ldap_args_t * args,	/* IN */
 			       const char *filterprot,	/* IN */
-			       ldap_map_selector_t sel,	/* IN */
+			       ldap_map_selector_t sel,		/* IN */
 			       int sizelimit,	/* IN */
 			       LDAPMessage ** pRes /* OUT */ );
 
@@ -486,21 +486,21 @@ NSS_STATUS _nss_ldap_getbyname (ldap_args_t * args,	/* IN/OUT */
 				char *buffer,	/* IN */
 				size_t buflen,	/* IN */
 				int *errnop,	/* OUT */
-				const char *filterprot,	/* IN */
+				const char *filterprot,		/* IN */
 				ldap_map_selector_t sel,	/* IN */
 				parser_t parser /* IN */ );
 
 /* parsing utility functions */
 NSS_STATUS _nss_ldap_assign_attrvals (LDAP * ld,	/* IN */
 				      LDAPMessage * e,	/* IN */
-				      const char *attr,	/* IN */
+				      const char *attr,		/* IN */
 				      const char *omitvalue,	/* IN */
 				      char ***valptr,	/* OUT */
 				      char **buffer,	/* IN/OUT */
 				      size_t * buflen,	/* IN/OUT */
 				      size_t * pvalcount /* OUT */ );
 
-NSS_STATUS _nss_ldap_assign_attrval (LDAP * ld,	/* IN */
+NSS_STATUS _nss_ldap_assign_attrval (LDAP * ld,		/* IN */
 				     LDAPMessage * e,	/* IN */
 				     const char *attr,	/* IN */
 				     char **valptr,	/* OUT */
@@ -508,12 +508,19 @@ NSS_STATUS _nss_ldap_assign_attrval (LDAP * ld,	/* IN */
 				     size_t * buflen /* IN/OUT */ );
 
 
-NSS_STATUS _nss_ldap_assign_passwd (LDAP * ld,	/* IN */
-				    LDAPMessage * e,	/* IN */
-				    const char *attr,	/* IN */
-				    char **valptr,	/* OUT */
-				    char **buffer,	/* IN/OUT */
-				    size_t * buflen);	/* IN/OUT */
+NSS_STATUS _nss_ldap_assign_userpassword (LDAP * ld,	/* IN */
+					  LDAPMessage * e,	/* IN */
+					  const char *attr,	/* IN */
+					  char **valptr,	/* OUT */
+					  char **buffer,	/* IN/OUT */
+					  size_t * buflen);	/* IN/OUT */
+
+NSS_STATUS _nss_ldap_assign_authpassword (LDAP * ld,	/* IN */
+					  LDAPMessage * e,	/* IN */
+					  const char *attr,	/* IN */
+					  char **valptr,	/* OUT */
+					  char **buffer,	/* IN/OUT */
+					  size_t * buflen);	/* IN/OUT */
 
 NSS_STATUS _nss_ldap_oc_check (LDAP * ld, LDAPMessage * e, const char *oc);
 
